--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   rxdart: ^0.27.5
   get_it: ^7.2.0
+  device_info_plus: ^3.1.0
 
 dev_dependencies:
   flutter_test:
