--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   rxdart: ^0.27.5
   get_it: ^7.2.0
   device_info_plus: ^3.1.0
+  flutter_calendar_carousel: ^2.2.0
 
 dev_dependencies:
   flutter_test:
